leitura corrigido.